# peakolator

./: Makefile.am  README.md  TODO.md  autogen.sh  configure.ac
examples/: Makefile.am  common.h  cpg_islands.c
src/: Makefile.am  peakolator.c  peakolator.h
tests/: Makefile.am  haystack.c  needle.c  pqueue.c  prior.c  vector-sum-update-end.c  vector-sum-update-start.c  vector-sums.c
